...
        onValueChange={(value) => setIsImportant(value)}
        label="Is important?"
      />
      <Spacer size="16px" />
      <Button onPress={onSubmit} disabled={isPending || title === ""}>
        <Text style={{ color: "#fff", lineHeight: 24, fontSize: 16 }}>
          Create
        </Text>
      </Button>
    </S.Container>
  );
}

...
