appId: com.homeapp
---
- tapOn: "+"
- tapOn: "Title"
- inputText: "Test Note"
- tapOn: "Content"
- inputText: "Remember to commit and push the code"
- tapOn: "Create"
- assertVisible: "Test Note"
- tapOn: "Test Note"
- tapOn: "Edit"
- assertVisible: "Edit note"
- tapOn: "Test Note"
- inputText: "Edit"
- tapOn: "Save"
- assertVisible: "Test NoteEdit"
- tapOn: "Delete"
- tapOn: "OK"
- assertVisible: ".*you don't have notes.*"
